tests/snapshots/cast_float_nan_trap.snap
---
source: tests/fault_snapshots.rs
---
program: cast_float_nan_trap.lu
trap:    overflow
clause:  [arith.checked]
rule:    ArithChecked
message: `NaN as int` does not fit `int` — numeric casts are checked conversions in every profile (X3)
at:      11:13 `x as int`
because: (single-span fault)
