tests/snapshots/cast_float_overflow_trap.snap
---
source: tests/fault_snapshots.rs
---
program: cast_float_overflow_trap.lu
trap:    overflow
clause:  [arith.checked]
rule:    ArithChecked
message: `1000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 as int` does not fit `int` — numeric casts are checked conversions in every profile (X3)
at:      12:13 `x as int`
because: (single-span fault)
