tests/snapshots/cast_narrow_sign_trap.snap
---
source: tests/fault_snapshots.rs
---
program: cast_narrow_sign_trap.lu
trap:    overflow
clause:  [arith.checked]
rule:    ArithChecked
message: `-1 as u64` is outside `u64` — numeric casts are checked conversions in every profile (X3); spell intended overflow `wrapping[u64]`
at:      13:13 `v as u64`
because: (single-span fault)
